# metroai

./: .git_commit_message_v0.6.0.txt  .gitignore  AUTH_IMPLEMENTATION.md  CHANGELOG.md  CITATION.cff  COMPLETION_CHECKLIST.md  DELIVERABLES.txt  DEPLOY_GUIDE.md  IMPLEMENTATION_SUMMARY.md  LICENSE  MCP_README.md  PDF_GENERATION_GUIDE.md  QUICK_START.md  README.md  README_PDF.md  TEST_AUTH_MANUAL.md  app.py  mcp_manifest.json  metroai_data.db-journal  pyproject.toml  requirements.txt
.github/workflows/: release.yml  tests.yml
.streamlit/: config.toml  pages.toml
docs/: HONESTY_NOTES.md  RELEASE_NOTES_v0.6.0.md  RELEASE_NOTES_v0.7.0.md  RELEASE_NOTES_v0.8.0.md  TRUSTWORTHY_AI.md  v0.6.0_RELEASE_OPS.md  v0.7.0_ROADMAP.md
metroai/: __init__.py  exceptions.py  mcp_server.py  schemas.py
metroai/agents/: __init__.py  base.py  job_scout.py  kolas_audit_predictor.py  kolas_monitor.py  orchestrator.py  schedule.py  semi_intel.py
metroai/audit/: __init__.py  provenance.py  signature.py
metroai/auth/: __init__.py  auth_manager.py  config.yaml
metroai/connectors/: __init__.py  base.py  dart_connector.py  kolas_connector.py  ntis_connector.py
metroai/content/: __init__.py  application_form.py  domain_page.py  kolas_guides.py
metroai/core/: __init__.py  distributions.py  gum.py  mcm.py  model.py  reverse_uncertainty.py
metroai/db/: __init__.py  database.py
metroai/dcc/: __init__.py  builder.py  kolas_map.md  parser.py  units.py
metroai/export/: __init__.py  kolas_excel.py  kolas_pdf.py
metroai/inverse/: PLATFORM_INDEX.md  README.md  __init__.py  flagship_v0_forward_inverse.py  flagship_v1_autodiff_gpu.py  gum_posterior_bridge.py  measurement_gate.py  metrology_module_10_lamb_acoustic.py  metrology_module_2_xrr_refnx.py  metrology_module_3_tem_lattice_gpa.py  metrology_module_4_raman_quant.py  metrology_module_5_tem_gpa_strain.py  metrology_module_6_sem_cd.py  metrology_module_7_afm_spm_real.py  metrology_module_8_pl_exciton.py  metrology_module_9_nsom_defect_mapping.py  ml_inverse.py  nist_real_data_inverse.py  ocd_depth1_accuracy_cv.py  ocd_depth2_gpr.py  ocd_depth2p5_noise.py  ocd_depth2p6_robust.py  sem_depth_mds3838_segmentation.py  tem_depth_4dstem_strain_py4dstem.py  uncertainty.py
metroai/math/: __init__.py  sobol_qmc.py
metroai/ml/: __init__.py  audit_risk_model.py  synthetic_audit_data.py
metroai/modules/: pt_analyzer.py
metroai/templates/: __init__.py  afm_roughness.py  (+8 more)
pages/: 10_🔧_장비관리.py  11_🤖_6_Agents_대시보드.py  12_📋_SOP_갭_분석.py  13_📰_KOLAS_피드.py  14_🎯_감사_위험_상세.py  15_📅_인증서_인력_일정.py  16_🔬_SEM_분야.py  17_⚛️_TEM_분야.py  18_📐_AFM_분야.py  19_📏_OCD_분야.py  1_📐_불확도_계산.py  20_📝_KOLAS_신청서_작성.py  2_📊_PT_분석.py  3_📄_교정성적서.py  4_🔄_불확도_역설계.py  5_🔑_관리자.py  6_🗺️_KOLAS_로드맵.py  7_📖_용어사전.py  8_✅_심사_셀프체크.py  9_🔗_측정의뢰.py
tests/: test_dcc.py  test_distributions.py  test_gum.py  test_kolas_pdf.py  test_mcm.py  test_pt_analyzer.py  test_reverse_uncertainty.py  test_template_length.py  test_template_mass.py  test_template_pressure.py  test_template_temperature.py  test_v060_ml.py  test_v060_modules.py  test_v070_p0_content.py
(+3 files in other folders)
