[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "metroai"
version = "0.1.0"
description = "KOLAS 측정불확도 예산 자동화 도구 — MetroAI"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "용범 김", email = "kyb8801@gmail.com"},
]
keywords = ["measurement-uncertainty", "GUM", "KOLAS", "metrology", "calibration"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "sympy>=1.12",
    "numpy>=1.24",
    "scipy>=1.10",
    "openpyxl>=3.1",
    "reportlab>=4.0",
    "streamlit>=1.30",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
