[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "metroai"
version = "0.6.0"
description = "MetroAI — KOLAS compliance OS. 6 AI agents + GUM/MCM/QMC uncertainty + verifiable audit trail."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Yongbeom Kim", email = "kyb8801@gmail.com"},
]
keywords = [
    "measurement-uncertainty", "GUM", "MCM", "QMC",
    "ISO-17025", "ISO-18516", "KOLAS",
    "calibration", "metrology",
    "TEM", "SEM-EDS", "AFM", "OCD", "nano-metrology",
    "compliance", "audit-trail", "Ed25519", "PROV-O",
    "ai-agents", "regulatory",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "sympy>=1.12",
    "numpy>=1.24",
    "scipy>=1.10",
    "openpyxl>=3.1",
    "reportlab>=4.0",
    "streamlit>=1.30",
    "pydantic>=2.0",
    "cryptography>=42.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1",
    "mypy>=1.8",
]
ml = [
    "scikit-learn>=1.4",
    "joblib>=1.3",
]
mcp = [
    "mcp>=0.9",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501", "E741"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["E501"]
"metroai/templates/*.py" = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = false
warn_unused_configs = true
ignore_missing_imports = true
